# Grape-Pi

./: .gitignore  README.md  best_model.py  grape_pi.py  graphgym.py  main.py  pyproject.toml  requirements.txt  setup.py
analysis-code/: design_space_yeast.ipynb  evaluation-gastric-lightning.ipynb  evaluation-gastric-soft-label.ipynb
analysis-code/Waters-data-processing/: calc_local_fdr.ipynb  gastric-sample-labeling.ipynb  gastric-sample-soft-labeling.ipynb  merge-with-mRNA-data.ipynb
analysis-code/Yeast-data-pre-processing/: yeast-analysis.ipynb
analysis-code/cancer-detection/: cancer-detection.ipynb
analysis-code/data_pre_processing/: human-ORBI.ipynb  mapping_ENSP_to_accession.ipynb  merge-with-mRNA-data.ipynb
analysis-code/design-space-analysis/: design_space_yeast.ipynb
analysis-code/example/: Grape-Pi-GCNConv.ipynb  Grape-Pi-SAGEConv1.ipynb
analysis-code/post-training-evaluation/: GNN-PPI-yeast-lightning.ipynb  evaluation-gastric-soft-label.ipynb  get-model-from-checkpoint.ipynb
configs/protein/: gastric-gcnconv.yaml  gastric-graphsage.yaml  yeast-gcnconv.yaml  yeast-graphsage.yaml
custom_graphgym/: __init__.py
custom_graphgym/loader/: protein.py
custom_graphgym/train/: gcnconv_model_builder.py  graphconv_train.py  graphsage_train.py
graphgym/: ._core.208367  ._run_batch.sh  ._run_batch_protein.sh  ._run_batch_protein_gpu.sh  ._run_batch_protein_single.sh  best_model.py  logger.py  main-graphsage.py  main.py  parallel.sh  run_batch_protein.sh.LOCAL.14121.sh  run_batch_protein.sh.REMOTE.14121.sh  run_batch_protein.sh.orig  run_batch_protein_batch.sh  run_batch_protein_gpu.sh  run_batch_protein_single.sh  run_batch_yeast_gcnconv.sh  run_batch_yeast_graphsage.sh
graphgym/analysis/: gastric-sample-pre-analysis.ipynb  post_training_analysis.ipynb  yeast-analysis.ipynb
graphgym/configs/: ._example-hpc-cpu.yaml  ._example-hpc.yaml  example-hpc-cpu.yaml  example-hpc.yaml  example.yaml  protein.yaml
graphgym/grids/: ._example.txt  ._protein.txt  protein-batch.txt  protein-yeast-gcnconv.txt  protein-yeast-graphsage.txt  protein-yeast.txt  protein.txt  yeast-graphsage.txt
graphgym/jupyter_notebook/: GNN-PPI-yeast copy.ipynb  GNN-PPI-yeast-lightning.ipynb  GNN-PPI-yeast.ipynb  gastric-sample-pre-analysis.ipynb
notebooks/example/: Grape-Pi-GAT.ipynb  (+1 more)
saved_results/: prediction_from_MLP.csv  prediction_from_grapesage.csv
src/: protein_loader.py
(+612 files in other folders)
