[tool.poetry]
name = "grape-pi"
version = "1.0.0"
description = "Using graph neural networks to enhance protein identification using protein interaction networks."
authors = ["Chunhui Gu <fduguchunhui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.x"
numpy = "^1.26.4"
pandas = "^2.2.2"
yacs = "^0.1.8"
hydra-core = "^1.3.2"
protobuf = "4.21"
chardet = "^5.2.0"
torch-geometric = "2.5.3"
torch = "2.0.0"
torch-sparse= {version="0.6.18", source="pyg-cpu"}
#torch-scatter="2.1.2"
#torch-cluster="1.6.3"
#torch-spline-conv="1.2.2"

[[tool.poetry.source]]
name = "pyg-cpu"
url = "https://data.pyg.org/whl/torch-2.0.0+cpu.html"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"